syntax = "proto3";

package interacciones;

service InteraccionesService {
  rpc DarLike (LikeRequest) returns (MensajeResponse);
  rpc DejarComentario (ComentarioRequest) returns (MensajeResponse);
  rpc ObtenerInteracciones (VideoRequest) returns (InteraccionesResponse);
  rpc SeedInteracciones (Empty) returns (MensajeResponse);
  rpc HealthCheck (Empty) returns (HealthResponse);
}

message LikeRequest {
  string videoId = 1;
  string token = 2;
}

message ComentarioRequest {
  string videoId = 1;
  string content = 2;
  string token = 3;
}

message VideoRequest {
  string videoId = 1;
  string token = 2;
}

message MensajeResponse {
  string message = 1;
}

message Comentario {
  string id = 1;
  string usuarioId = 2;
  string content = 3;
  string createdAt = 4;
}

message InteraccionesResponse {
  int32 likes = 1;
  repeated Comentario comentarios = 2;
}

message HealthResponse {
  string status = 1;
  string service = 2;
  string timestamp = 3;
}

message Empty {}